apply plugin: 'com.android.library'
apply plugin: 'kotlin-android'

android {

    compileSdkVersion 34
    viewBinding.enabled true

    buildFeatures {
        viewBinding true
    }

    defaultConfig {
        minSdkVersion 16
        targetSdkVersion 34
        versionCode 1
        versionName "1.0"
        testInstrumentationRunner 'androidx.test.runner.AndroidJUnitRunner'
    }

    compileOptions {
        sourceCompatibility JavaVersion.VERSION_1_8
        targetCompatibility JavaVersion.VERSION_1_8
    }

    buildTypes {
        release {
            minifyEnabled false
            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
        }
    }
    useLibrary 'org.apache.http.legacy'
}


android {
    defaultConfig {
        vectorDrawables.useSupportLibrary = true
    }
}

dependencies {
    implementation fileTree(dir: 'libs', include: ['*.jar'])

    implementation project(path: ':saffal')
    implementation project(path: ':changeloglib')

    implementation 'net.lingala.zip4j:zip4j:2.5.1'

    annotationProcessor 'com.github.bumptech.glide:compiler:4.9.0'
    implementation 'com.github.bumptech.glide:glide:4.9.0'
    implementation 'com.google.code.gson:gson:2.10.1'
    implementation 'org.ocpsoft.prettytime:prettytime:4.0.6.Final'

    implementation 'com.google.android.material:material:1.6.0'

    implementation 'androidx.appcompat:appcompat:1.6.0'
    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
    implementation 'androidx.recyclerview:recyclerview:1.3.2'
    implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
    implementation 'androidx.annotation:annotation:1.9.1'
    implementation 'androidx.core:core-ktx:1.8.0'

    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.7.3"
    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.7.3"
    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"


    // Java language implementation
    implementation "androidx.activity:activity:1.8.0"
    // Kotlin
    implementation 'androidx.activity:activity-ktx:1.8.0'
}

repositories {
    mavenCentral()
}
